--- a/index.html
+++ b/index.html
@@ -304,18 +304,18 @@
 
 
     <footer class="footer">
-        <ul class="container list grid">
-            <li class="grid-item footer-grid">
+        <div class="container list footer-block">
+            <div class="footer-grid">
                 <a class="logo link" href="./index.html"> <span class="accent-logo">Web</span>Studio</a>
                 <address class="address">
                     <p class="street-address"> г. Киев, пр-т Леси Украинки, 26</p>
                     <ul class="contact list">
                         <li class="item-address"> <a class="item link" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-                        <liclass="item-address"> <a class="item link" href="tel:+380961111111">+38 096 111 11 11</a> </li>
+                        <li class="item-address"> <a class="item link" href="tel:+380961111111">+38 096 111 11 11</a> </li>
                     </ul>
                 </address>
-            </li>
-            <li class="grid-item footer-grid">
+            </div>
+            <div class="footer-grid">
                 <h3 class="footer-title">Присоединяйтесь</h3>
                 <ul class="list social-icons">
                     <li class="social-icons-item">
@@ -348,8 +348,8 @@
                     </li>
                 </ul>
 
-            </li>
-        <ul>
+            </div>
+        <div>
     </footer>
     
 </body>
